POWR-918 Added new fields to image, video and audio media types; added Media License taxonomy

--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -3,12 +3,22 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_caption
+    - field.field.media.image.field_creator
+    - field.field.media.image.field_file_size
     - field.field.media.image.field_group
+    - field.field.media.image.field_image_height
+    - field.field.media.image.field_image_width
+    - field.field.media.image.field_license
     - field.field.media.image.field_media_in_library
+    - field.field.media.image.field_mime_type
+    - field.field.media.image.field_source
+    - field.field.media.image.field_title
     - field.field.media.image.image
     - media.type.image
   module:
     - image
+    - text
 _core:
   default_config_hash: VLDxfMVPTkd2xvOjFMCh3kWmaOYnd03zggFXuUXQVEY
 id: media.image.default
@@ -18,7 +28,7 @@ mode: default
 content:
   created:
     type: timestamp
-    weight: 2
+    weight: 9
     region: content
     label: inline
     settings:
@@ -26,17 +36,73 @@ content:
       custom_date_format: ''
       timezone: ''
     third_party_settings: {  }
-  field_group:
+  field_caption:
     weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
+  field_creator:
+    weight: 4
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_file_size:
+    weight: 8
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
+  field_group:
+    weight: 10
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_license:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_mime_type:
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_source:
+    weight: 5
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_title:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   image:
     type: image
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       image_link: ''
@@ -53,6 +119,8 @@ content:
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  field_image_height: true
+  field_image_width: true
   field_media_in_library: true
   thumbnail: true
   uid: true
