--- a/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
@@ -4,8 +4,17 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.embedded
+    - field.field.media.image.field_caption
+    - field.field.media.image.field_creator
+    - field.field.media.image.field_file_size
     - field.field.media.image.field_group
+    - field.field.media.image.field_image_height
+    - field.field.media.image.field_image_width
+    - field.field.media.image.field_license
     - field.field.media.image.field_media_in_library
+    - field.field.media.image.field_mime_type
+    - field.field.media.image.field_source
+    - field.field.media.image.field_title
     - field.field.media.image.image
     - image.style.max_540w
     - media.type.image
@@ -19,6 +28,38 @@ targetEntityType: media
 bundle: image
 mode: embedded
 content:
+  field_creator:
+    type: string
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_license:
+    type: entity_reference_label
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_source:
+    type: string
+    weight: 3
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_title:
+    type: string
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   image:
     type: image
     weight: 0
@@ -38,8 +79,13 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_caption: true
+  field_file_size: true
   field_group: true
+  field_image_height: true
+  field_image_width: true
   field_media_in_library: true
+  field_mime_type: true
   name: true
   thumbnail: true
   uid: true
