--- a/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
@@ -4,8 +4,17 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.media_library
+    - field.field.media.image.field_caption
+    - field.field.media.image.field_creator
+    - field.field.media.image.field_file_size
     - field.field.media.image.field_group
+    - field.field.media.image.field_image_height
+    - field.field.media.image.field_image_width
+    - field.field.media.image.field_license
     - field.field.media.image.field_media_in_library
+    - field.field.media.image.field_mime_type
+    - field.field.media.image.field_source
+    - field.field.media.image.field_title
     - field.field.media.image.image
     - media.type.image
     - responsive_image.styles.paragraph_image
@@ -46,7 +55,16 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_caption: true
+  field_creator: true
+  field_file_size: true
   field_group: true
+  field_image_height: true
+  field_image_width: true
+  field_license: true
   field_media_in_library: true
+  field_mime_type: true
+  field_source: true
+  field_title: true
   thumbnail: true
   uid: true
