--- a/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
@@ -4,9 +4,14 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.embedded
+    - field.field.media.video.field_caption
+    - field.field.media.video.field_creator
     - field.field.media.video.field_group
+    - field.field.media.video.field_license
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_source
+    - field.field.media.video.field_title
     - field.field.media.video.field_transcript
     - media.type.video
   module:
@@ -19,6 +24,22 @@ targetEntityType: media
 bundle: video
 mode: embedded
 content:
+  field_creator:
+    type: string
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_license:
+    type: entity_reference_label
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
   field_media_video_embed_field:
     type: video_embed_field_video
     weight: 0
@@ -37,9 +58,26 @@ content:
             lb-col: false
             classes: {  }
     region: content
+  field_source:
+    type: string
+    weight: 3
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_title:
+    type: string
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   created: true
+  field_caption: true
   field_group: true
   field_media_in_library: true
   field_transcript: true
