--- a/web/sites/default/config/field.field.media.image.image.yml
+++ b/web/sites/default/config/field.field.media.image.image.yml
@@ -19,7 +19,7 @@ field_name: image
 entity_type: media
 bundle: image
 label: Image
-description: ''
+description: 'Make sure to provide alt text that contains a concise, objective description of the content portrayed in the image. Alt text is never displayed to sighted users because it should contain the same information the user can get by viewing the image.'
 required: true
 translatable: false
 default_value: {  }
