--- a/web/sites/default/config/field.field.media.video.field_caption.yml
+++ b/web/sites/default/config/field.field.media.video.field_caption.yml
@@ -1,9 +1,9 @@
-uuid: e32a8de1-5426-41b0-9b30-cd1f07003558
+uuid: 2fdfe4aa-5f3b-4142-aefc-903ad8493735
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.media.field_transcript
+    - field.storage.media.field_caption
     - media.type.video
   module:
     - allowed_formats
@@ -11,23 +11,23 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    simple_editor: simple_editor
     plain_text: plain_text
     full_html: '0'
+    simple_editor: '0'
     simplified_editor_with_media_embed: '0'
     rich_text: '0'
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: media.video.field_transcript
-field_name: field_transcript
+id: media.video.field_caption
+field_name: field_caption
 entity_type: media
 bundle: video
-label: Transcript
-description: ''
+label: Caption
+description: 'Provide additional information or context for the image that is not apparent from viewing the image or reading the alt text. The caption should never repeat information provided in alt text. Limit 300 characters.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: text_long
+field_type: text
