--- a/web/sites/default/config/field.storage.media.field_caption.yml
+++ b/web/sites/default/config/field.storage.media.field_caption.yml
@@ -1,4 +1,4 @@
-uuid: ab94c7ab-7dc8-45e0-b555-ca8a5919f36f
+uuid: 295dcd95-ed59-4926-947f-de009d2bc088
 langcode: en
 status: true
 dependencies:
@@ -9,11 +9,12 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: media.field_transcript
-field_name: field_transcript
+id: media.field_caption
+field_name: field_caption
 entity_type: media
-type: text_long
-settings: {  }
+type: text
+settings:
+  max_length: 300
 module: text
 locked: false
 cardinality: 1
