--- a/web/sites/default/config/field.storage.media.field_image_width.yml
+++ b/web/sites/default/config/field.storage.media.field_image_width.yml
@@ -1,20 +1,21 @@
-uuid: ab94c7ab-7dc8-45e0-b555-ca8a5919f36f
+uuid: 13a8f017-8c71-4d43-96fa-c759817f5715
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - media
-    - text
 third_party_settings:
   field_permissions:
     permission_type: public
-id: media.field_transcript
-field_name: field_transcript
+id: media.field_image_width
+field_name: field_image_width
 entity_type: media
-type: text_long
-settings: {  }
-module: text
+type: integer
+settings:
+  unsigned: false
+  size: normal
+module: core
 locked: false
 cardinality: 1
 translatable: true
