--- a/web/sites/default/config/field.storage.media.field_source.yml
+++ b/web/sites/default/config/field.storage.media.field_source.yml
@@ -1,20 +1,22 @@
-uuid: ab94c7ab-7dc8-45e0-b555-ca8a5919f36f
+uuid: 69dcf8ac-8258-4240-965d-35468504be0a
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - media
-    - text
 third_party_settings:
   field_permissions:
     permission_type: public
-id: media.field_transcript
-field_name: field_transcript
+id: media.field_source
+field_name: field_source
 entity_type: media
-type: text_long
-settings: {  }
-module: text
+type: string
+settings:
+  max_length: 510
+  is_ascii: false
+  case_sensitive: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
