--- a/web/sites/default/config/media.type.image.yml
+++ b/web/sites/default/config/media.type.image.yml
@@ -17,4 +17,8 @@ queue_thumbnail_downloads: false
 new_revision: false
 source_configuration:
   source_field: image
-field_map: {  }
+field_map:
+  mimetype: field_mime_type
+  filesize: field_file_size
+  width: field_image_width
+  height: field_image_height
