--- a/web/sites/default/config/core.entity_form_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.default.yml
@@ -3,9 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.audio.field_caption
+    - field.field.media.audio.field_creator
     - field.field.media.audio.field_group
+    - field.field.media.audio.field_license
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
+    - field.field.media.audio.field_source
+    - field.field.media.audio.field_title
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
@@ -19,20 +24,58 @@ targetEntityType: media
 bundle: audio
 mode: default
 content:
+  field_caption:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textfield
+    region: content
+  field_creator:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_group:
-    weight: 4
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
+  field_license:
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_media_video_embed_field:
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: video_embed_field_textfield
     region: content
+  field_source:
+    weight: 7
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_title:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_transcript:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -41,7 +84,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 6
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -57,13 +100,13 @@ content:
         maxlength_js: 60
         maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   preview:
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 5
+    weight: 10
     region: content
     settings:
       display_label: true
