--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -3,8 +3,17 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_caption
+    - field.field.media.image.field_creator
+    - field.field.media.image.field_file_size
     - field.field.media.image.field_group
+    - field.field.media.image.field_image_height
+    - field.field.media.image.field_image_width
+    - field.field.media.image.field_license
     - field.field.media.image.field_media_in_library
+    - field.field.media.image.field_mime_type
+    - field.field.media.image.field_source
+    - field.field.media.image.field_title
     - field.field.media.image.image
     - image.style.max_540w
     - media.type.image
@@ -13,6 +22,7 @@ dependencies:
     - content_moderation
     - focal_point
     - lightning_media
+    - text
 _core:
   default_config_hash: kyoAHlZTGIuGTaQuBblGBk8EhfnVKOl19_0j5WbpQqM
 id: media.image.default
@@ -20,15 +30,53 @@ targetEntityType: media
 bundle: image
 mode: default
 content:
+  field_caption:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textfield
+    region: content
+  field_creator:
+    weight: 4
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_group:
-    weight: 2
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_license:
+    weight: 6
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
+  field_source:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_title:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   image:
     type: image_focal_point
-    weight: 1
+    weight: 2
     settings:
       preview_image_style: max_540w
       preview_link: true
@@ -41,7 +89,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 4
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -55,13 +103,17 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 3
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
 hidden:
   created: true
+  field_file_size: true
+  field_image_height: true
+  field_image_width: true
   field_media_in_library: true
+  field_mime_type: true
   path: true
   uid: true
