--- a/web/sites/default/config/core.entity_view_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.default.yml
@@ -3,9 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.audio.field_caption
+    - field.field.media.audio.field_creator
     - field.field.media.audio.field_group
+    - field.field.media.audio.field_license
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
+    - field.field.media.audio.field_source
+    - field.field.media.audio.field_title
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
@@ -20,23 +25,46 @@ content:
   created:
     label: inline
     type: timestamp
-    weight: 3
+    weight: 8
     region: content
     settings:
       date_format: medium
       custom_date_format: ''
       timezone: ''
     third_party_settings: {  }
+  field_caption:
+    weight: 3
+    label: inline
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
+  field_creator:
+    weight: 5
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_group:
-    weight: 4
-    label: above
+    weight: 9
+    label: inline
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_license:
+    weight: 7
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
   field_media_video_embed_field:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       responsive: true
@@ -53,8 +81,24 @@ content:
             classes: {  }
     type: video_embed_field_video
     region: content
+  field_source:
+    weight: 6
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_title:
+    weight: 1
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_transcript:
-    weight: 2
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
