--- a/web/sites/default/config/core.entity_view_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.default.yml
@@ -3,9 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.video.field_caption
+    - field.field.media.video.field_creator
     - field.field.media.video.field_group
+    - field.field.media.video.field_license
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_source
+    - field.field.media.video.field_title
     - field.field.media.video.field_transcript
     - media.type.video
   module:
@@ -21,7 +26,7 @@ mode: default
 content:
   created:
     type: timestamp
-    weight: 3
+    weight: 8
     region: content
     label: inline
     settings:
@@ -29,9 +34,32 @@ content:
       custom_date_format: ''
       timezone: ''
     third_party_settings: {  }
+  field_caption:
+    weight: 3
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
+  field_creator:
+    weight: 5
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_group:
-    weight: 4
-    label: above
+    weight: 9
+    label: inline
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_license:
+    weight: 7
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
@@ -39,7 +67,7 @@ content:
     region: content
   field_media_video_embed_field:
     type: video_embed_field_video
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       responsive: true
@@ -55,8 +83,24 @@ content:
             lb-col: false
             classes: {  }
     region: content
+  field_source:
+    weight: 6
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_title:
+    weight: 1
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_transcript:
-    weight: 2
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
