--- a/web/sites/default/config/field.storage.media.field_creator.yml
+++ b/web/sites/default/config/field.storage.media.field_creator.yml
@@ -1,20 +1,22 @@
-uuid: ab94c7ab-7dc8-45e0-b555-ca8a5919f36f
+uuid: bf2ea19a-d13a-44e1-96e8-342dd5b593aa
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - media
-    - text
 third_party_settings:
   field_permissions:
     permission_type: public
-id: media.field_transcript
-field_name: field_transcript
+id: media.field_creator
+field_name: field_creator
 entity_type: media
-type: text_long
-settings: {  }
-module: text
+type: string
+settings:
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
