--- a/web/sites/default/config/field.storage.media.field_license.yml
+++ b/web/sites/default/config/field.storage.media.field_license.yml
@@ -1,20 +1,21 @@
-uuid: ab94c7ab-7dc8-45e0-b555-ca8a5919f36f
+uuid: edfbc7f2-df9e-4baa-bbce-17ebaa193533
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - media
-    - text
+    - taxonomy
 third_party_settings:
   field_permissions:
     permission_type: public
-id: media.field_transcript
-field_name: field_transcript
+id: media.field_license
+field_name: field_license
 entity_type: media
-type: text_long
-settings: {  }
-module: text
+type: entity_reference
+settings:
+  target_type: taxonomy_term
+module: core
 locked: false
 cardinality: 1
 translatable: true
