--- a/web/sites/default/config/media.type.audio.yml
+++ b/web/sites/default/config/media.type.audio.yml
@@ -16,4 +16,5 @@ queue_thumbnail_downloads: false
 new_revision: false
 source_configuration:
   source_field: field_media_video_embed_field
-field_map: {  }
+field_map:
+  source_name: field_title
