--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.1",
-        "drupal/easy_breadcrumb": "^1.8",
+        "drupal/easy_breadcrumb": "1.8.0",
         "drupal/eva": "^1.3",
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
@@ -186,6 +186,9 @@
             },
             "drupal/menu_token": {
                 "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
+            },
+            "drupal/easy_breadcrumb": {
+                "2979389 - Titles in breadcrumbs are 'double-escaped'": "https://www.drupal.org/files/issues/2018-06-21/2979389-7-easy-breadcrumb--double-escaped-titles.patch"            
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
