POWR-978 roll back composer files and update configs to remove conflict

--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -187,7 +187,6 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
-  field_project_type:
   field_search_keywords:
     weight: 16
     settings:
@@ -201,14 +200,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
-    region: content
-  field_shortname_or_acronym:
-    weight: 2
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
     region: content
   field_start_date:
     weight: 9
@@ -310,4 +301,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_project_type: true
