--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -118,6 +118,14 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
+  field_search_keywords:
+    weight: 4
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_start_date:
     weight: 19
     label: inline
@@ -154,13 +162,6 @@ content:
             fi: false
             fi-def-at: false
     type: datetime_default
-  field_search_keywords:
-    weight: 4
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
   field_summary:
     weight: 2
