--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.1",
-        "drupal/easy_breadcrumb": "1.8.0",
+        "drupal/easy_breadcrumb": "^1.8",
         "drupal/eva": "^1.3",
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
