--- a/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
@@ -140,6 +140,7 @@ hidden:
   field_legacy_path: true
   field_parent_group: true
   field_project_status: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   group_site_menu_entity_view_1: true
