POWR-918 fix audio embedded display

--- a/web/sites/default/config/core.entity_view_display.media.audio.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.embedded.yml
@@ -38,8 +38,13 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_caption: true
+  field_creator: true
   field_group: true
+  field_license: true
   field_media_in_library: true
+  field_source: true
+  field_title: true
   field_transcript: true
   name: true
   thumbnail: true
