--- a/.lando.yml
+++ b/.lando.yml
@@ -31,7 +31,7 @@ services:
       - /bin/sh -c "chmod -R 775 /var/www"
     build:
       - echo "Installing Node.js dependencies..."
-      - npm -C web/themes/custom/cloudy install
+      - npm -C /app/web/themes/custom/cloudy install
   chromedriver:
     type: compose
     services:
@@ -48,7 +48,7 @@ services:
 events:
   post-start:
     - node: echo "Building theme asset files..."
-    - node: npm -C web/themes/custom/cloudy run build:dev
+    - node: npm -C /app/web/themes/custom/cloudy run build:dev
 tooling:
   drush:
     description: Run drush commands
@@ -57,25 +57,26 @@ tooling:
   npm:
     description: Run npm commands
     service: node
-    cmd: npm -C web/themes/custom/cloudy
+    cmd: cd /app/web/themes/custom/cloudy && npm -C /app/web/themes/custom/cloudy
   node:
     description: Run node commands
     service: node
   latest:
     description: Download and import the latest database from Dev
     cmd:
+      - appserver: mkdir -p /app/artifacts
       - appserver: echo "Downloading latest database..."
-      - appserver: rm -f artifacts/database.tar.gz
-      - appserver: terminus backup:get portlandor.dev --element=database --to=artifacts/database.tar.gz
+      - appserver: rm -f /app/artifacts/database.tar.gz
+      - appserver: terminus backup:get portlandor.dev --element=database --to=/app/artifacts/database.tar.gz
       - appserver: echo "Importing database..."
-      - database: /helpers/sql-import.sh artifacts/database.tar.gz
+      - database: cd /app && /helpers/sql-import.sh artifacts/database.tar.gz
       - appserver: echo "Clearing cache..."
       - appserver: drush cr -y
   refresh:
     description: Refresh branch by installing Composer dependencies and importing Drupal config, etc. Run after every merge from master.
     cmd:
       - appserver: echo "Installing Composer dependencies..."
-      - appserver: composer install
+      - appserver: composer install -d /app
       - appserver: echo "Clearing cache..."
       - appserver: drush cr -y
       - appserver: echo "Run database updates..."
@@ -87,7 +88,7 @@ tooling:
       - appserver: echo "Clearing cache..."
       - appserver: drush cr -y
       - appserver: echo "Building theme asset files..."
-      - node: npm -C web/themes/custom/cloudy run build:dev
+      - node: npm -C /app/web/themes/custom/cloudy run build:dev
   
   behat:
     service: appserver
