POWR-994 Add group serach keywords in index

--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -3,30 +3,31 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_community_actions
-    - field.storage.node.field_audience
-    - field.storage.node.field_body
-    - field.storage.node.field_end_date
-    - field.storage.node.field_end_time
+    - field.storage.group.field_audience
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
+    - field.storage.group.field_search_keywords
+    - field.storage.group.field_shortname_or_acronym
+    - field.storage.group.field_summary
+    - field.storage.group.field_topics
+    - field.storage.node.field_audience
+    - field.storage.node.field_body
+    - field.storage.node.field_community_actions
+    - field.storage.node.field_end_date
+    - field.storage.node.field_end_time
     - field.storage.node.field_popular
     - field.storage.node.field_published_on
-    - field.storage.group.field_shortname_or_acronym
     - field.storage.node.field_search_keywords
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
-    - field.storage.group.field_summary
     - field.storage.node.field_summary
-    - field.storage.group.field_audience
-    - field.storage.group.field_topics
     - field.storage.node.field_topics
     - search_api.server.searchstax
   module:
     - taxonomy
-    - node
     - group
     - search_api_solr
+    - node
     - search_api
     - portland
 id: full_index
@@ -198,6 +199,15 @@ field_settings:
       module:
         - taxonomy
         - taxonomy
+  group_field_search_keywords:
+    label: 'Search keywords'
+    datasource_id: 'entity:group'
+    property_path: field_search_keywords
+    type: solr_text_ngram
+    boost: !!float 21
+    dependencies:
+      config:
+        - field.storage.group.field_search_keywords
   group_id:
     label: 'Group ID'
     datasource_id: 'entity:group'
@@ -361,6 +371,7 @@ processor_settings:
       - field_summary
       - field_summary_1
       - group_audience_name
+      - group_field_search_keywords
       - group_title
       - group_topic_name
       - portland_group_title_field
