--- a/web/sites/default/config/search_api_autocomplete.search.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_autocomplete.search.search_portland_gov.yml
@@ -16,6 +16,8 @@ suggester_settings:
     fields:
       - content_title
       - field_search_keywords
+      - group_field_search_keywords
+      - group_title
       - rendered_item
     view_modes:
       'entity:group':
@@ -24,7 +26,13 @@ suggester_settings:
         program: ''
         project: ''
       'entity:node':
+        charter_article: ''
+        charter_chapter: ''
+        charter_section: ''
         city_service: ''
+        code_chapter: ''
+        code_section: ''
+        code_title: ''
         development_permit: ''
         event: ''
         guide: ''
