POWR-918 added new Basic style editor text format

--- a/web/sites/default/config/user.role.code_editor.yml
+++ b/web/sites/default/config/user.role.code_editor.yml
@@ -51,6 +51,7 @@ permissions:
   - 'revert code_chapter revisions'
   - 'revert code_section revisions'
   - 'revert code_title revisions'
+  - 'use text format basic_style_editor'
   - 'use text format full_html'
   - 'view charter_article revisions'
   - 'view charter_chapter revisions'
