--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -19,8 +19,8 @@ permissions:
   - 'break content lock'
   - 'create alert content'
   - 'create field_popular'
-  - 'create field_shortname_or_acronym'
   - 'create field_search_keywords'
+  - 'create field_shortname_or_acronym'
   - 'edit any alert content'
   - 'edit any audio_file media'
   - 'edit any building content'
@@ -39,6 +39,7 @@ permissions:
   - 'edit any video media'
   - 'edit field_menu_link'
   - 'edit field_popular'
+  - 'edit field_search_keywords'
   - 'edit field_shortname_or_acronym'
   - 'edit own alert content'
   - 'edit own building content'
@@ -47,6 +48,7 @@ permissions:
   - 'edit own event content'
   - 'edit own field_menu_link'
   - 'edit own field_popular'
+  - 'edit own field_search_keywords'
   - 'edit own guide content'
   - 'edit own information content'
   - 'edit own news content'
@@ -54,8 +56,6 @@ permissions:
   - 'edit own page content'
   - 'edit own service_location content'
   - 'edit own top_search content'
-  - 'edit field_search_keywords'
-  - 'edit own field_search_keywords'
   - 'edit terms in audience'
   - 'edit terms in community_actions'
   - 'edit terms in topics'
@@ -79,6 +79,7 @@ permissions:
   - 'schedule editorial transition publish'
   - 'update any media'
   - 'use moderation dashboard'
+  - 'use text format basic_style_editor'
   - 'view alert revisions'
   - 'view all media revisions'
   - 'view all revisions'
