--- a/web/sites/default/config/field.field.media.image.field_caption.yml
+++ b/web/sites/default/config/field.field.media.image.field_caption.yml
@@ -11,11 +11,12 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    plain_text: plain_text
+    basic_style_editor: basic_style_editor
     full_html: '0'
     simple_editor: '0'
     simplified_editor_with_media_embed: '0'
     rich_text: '0'
+    plain_text: '0'
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
