--- a/web/sites/default/config/user.role.anonymous.yml
+++ b/web/sites/default/config/user.role.anonymous.yml
@@ -12,6 +12,7 @@ permissions:
   - 'access content'
   - 'use search_api_autocomplete for search_portland_gov'
   - 'use search_api_autocomplete for services_fullindex'
+  - 'use text format basic_style_editor'
   - 'view field_body'
   - 'view field_popular'
   - 'view field_shortname_or_acronym'
