--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -56,6 +56,7 @@ permissions:
   - 'use media transition restore'
   - 'use search_api_autocomplete for search_portland_gov'
   - 'use search_api_autocomplete for services_fullindex'
+  - 'use text format basic_style_editor'
   - 'use text format simple_editor'
   - 'use text format simplified_editor_with_media_embed'
   - 'view all media revisions'
