POWR-918 enabled height and width fields in image media type display mode

--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -28,7 +28,7 @@ mode: default
 content:
   created:
     type: timestamp
-    weight: 9
+    weight: 11
     region: content
     label: inline
     settings:
@@ -61,13 +61,31 @@ content:
     type: number_integer
     region: content
   field_group:
-    weight: 10
+    weight: 12
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_image_height:
+    type: number_integer
+    weight: 9
+    region: content
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+  field_image_width:
+    type: number_integer
+    weight: 10
+    region: content
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
   field_license:
     weight: 6
     label: above
@@ -119,8 +137,6 @@ content:
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
-  field_image_height: true
-  field_image_width: true
   field_media_in_library: true
   thumbnail: true
   uid: true
