POWR-918 fixed description on title field

--- a/web/sites/default/config/field.field.media.image.field_title.yml
+++ b/web/sites/default/config/field.field.media.image.field_title.yml
@@ -16,7 +16,7 @@ field_name: field_title
 entity_type: media
 bundle: image
 label: Title
-description: 'This is the title of the work as given by the creator.'
+description: 'This is the title of the work as given by the creator. This may be different than the Name field, which is used internally for searching in the media library.'
 required: false
 translatable: false
 default_value: {  }
