POWR-994 Fix the npm update check error.

--- a/.lando.yml
+++ b/.lando.yml
@@ -23,9 +23,13 @@ services:
         MINK_DRIVER_ARGS: '["chrome", null, "http://chromedriver:4444/wd/hub"]'
         MINK_DRIVER_ARGS_WEBDRIVER: '["chrome", null, "http://chromedriver:4444/wd/hub"]'
         MINK_DRIVER_CLASS: 'Drupal\FunctionalJavascriptTests\DrupalSelenium2Driver'
-
+        
   node:
     type: node
+    overrides:
+      environment:
+        LANDO_WEBROOT_USER: www-data
+        LANDO_WEBROOT_GROUP: www-data
     run_as_root:
       - /bin/sh -c "adduser www-data node"
       - /bin/sh -c "chmod -R 775 /var/www"
