POWR-918 disabled new fields in displays until layout/style work is done

--- a/web/sites/default/config/core.entity_view_display.media.image.embedded_100.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.embedded_100.yml
@@ -28,38 +28,6 @@ targetEntityType: media
 bundle: image
 mode: embedded_100
 content:
-  field_creator:
-    type: string
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_license:
-    type: entity_reference_label
-    weight: 4
-    region: content
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-  field_source:
-    type: string
-    weight: 3
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_title:
-    type: string
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   image:
     type: responsive_image
     weight: 0
@@ -80,12 +48,16 @@ hidden:
   content_moderation_control: true
   created: true
   field_caption: true
+  field_creator: true
   field_file_size: true
   field_group: true
   field_image_height: true
   field_image_width: true
+  field_license: true
   field_media_in_library: true
   field_mime_type: true
+  field_source: true
+  field_title: true
   name: true
   thumbnail: true
   uid: true
