--- a/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
@@ -24,22 +24,6 @@ targetEntityType: media
 bundle: video
 mode: embedded
 content:
-  field_creator:
-    type: string
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_license:
-    type: entity_reference_label
-    weight: 4
-    region: content
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
   field_media_video_embed_field:
     type: video_embed_field_video
     weight: 0
@@ -58,28 +42,16 @@ content:
             lb-col: false
             classes: {  }
     region: content
-  field_source:
-    type: string
-    weight: 3
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_title:
-    type: string
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   created: true
   field_caption: true
+  field_creator: true
   field_group: true
+  field_license: true
   field_media_in_library: true
+  field_source: true
+  field_title: true
   field_transcript: true
   name: true
   thumbnail: true
