POWR-983 Format project date and export config updates

--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -44,8 +44,9 @@ third_party_settings:
       content:
         - field_featured_media
         - field_start_date
-        - group_date_and_time
+        - group_meta
         - field_end_date
+        - group_date_and_time
         - group_start_to_end_time
         - field_event_location
         - field_all_day
@@ -58,7 +59,7 @@ third_party_settings:
       children:
         - field_start_date
         - field_end_date
-      parent_name: ''
+      parent_name: group_meta
       weight: 1
       format_type: html_element
       format_settings:
@@ -70,7 +71,7 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: 'event--date h4'
+        classes: date
       label: 'Start to end date'
       region: content
     group_start_to_end_time:
@@ -78,7 +79,7 @@ third_party_settings:
         - field_all_day
         - field_start_time
         - field_end_time
-      parent_name: ''
+      parent_name: group_meta
       weight: 2
       format_type: html_element
       format_settings:
@@ -90,8 +91,27 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: 'event--time h4 mb-4'
+        classes: time
       label: 'Start to end time'
+      region: content
+    group_meta:
+      children:
+        - group_date_and_time
+        - group_start_to_end_time
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: mb-4
+        description: ''
+        element: div
+        show_label: false
+        label_element: h3
+        effect: none
+        speed: fast
+        attributes: ''
+      label: Meta
       region: content
 id: node.event.default
 targetEntityType: node
@@ -113,7 +133,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: '<i class="fas fa-clock"></i> '
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -125,7 +145,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: span
-            fi-cl: all-day
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -155,7 +175,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: to
+            prefix: '<span>&nbsp;to</span>'
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -181,7 +201,7 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 5
+    weight: 6
     label: hidden
     settings:
       time_format: '\t\o g:i A'
@@ -249,14 +269,6 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_search_keywords:
-    weight: 6
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_start_date:
     weight: 0
     label: hidden
@@ -269,7 +281,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: '<i class="fas fa-calendar"></i>'
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -281,7 +293,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: span
-            fi-cl: 'event--start-date pl-2'
+            fi-cl: event--start-date
             fi-at: ''
             suffix: ''
             lbw: false
@@ -372,4 +384,5 @@ hidden:
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   links: true
