--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -50,14 +50,15 @@ third_party_settings:
       weight: 1
       format_type: html_element
       format_settings:
-        id: ''
-        classes: 'project-dates h4'
+        label: 'Start to end date'
         element: div
         show_label: false
         label_element: h3
         attributes: ''
         effect: none
         speed: fast
+        id: ''
+        classes: 'date mb-4'
       label: 'Start to end date'
       region: content
 id: group.project.default
@@ -118,14 +119,6 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
-  field_search_keywords:
-    weight: 4
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_start_date:
     weight: 19
     label: inline
@@ -138,7 +131,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: '<i class="fas fa-calendar"></i>'
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -217,6 +210,7 @@ hidden:
   field_parent_group: true
   field_project_status: true
   field_project_type: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   label: true
