--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -37,8 +37,15 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
+        - node_post_date
         - field_summary
         - field_body_content
+    fields:
+      node_post_date:
+        plugin_id: node_post_date
+        weight: 1
+        label: hidden
+        formatter: ds_post_date_long
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -46,7 +53,7 @@ mode: default
 content:
   field_body_content:
     type: text_default
-    weight: 2
+    weight: 3
     region: content
     label: hidden
     settings: {  }
@@ -75,16 +82,8 @@ content:
             lb-col: false
             classes: {  }
     region: content
-  field_search_keywords:
-    weight: 3
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -129,5 +128,6 @@ hidden:
   field_published_on: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_topics: true
   links: true
