POWR-578 and POWR-1003 add indent, outdent, and insert symbol buttons to text formats/editors

--- a/web/sites/default/config/editor.editor.full_html.yml
+++ b/web/sites/default/config/editor.editor.full_html.yml
@@ -22,6 +22,10 @@ settings:
             - Bold
             - Italic
             - Strike
+            - Superscript
+            - Subscript
+            - '-'
+            - RemoveFormat
         -
           name: Lists
           items:
@@ -55,7 +59,6 @@ settings:
         -
           name: Paste
           items:
-            - RemoveFormat
             - Paste
             - PasteText
             - PasteFromWord
