--- a/web/sites/default/config/editor.editor.rich_text.yml
+++ b/web/sites/default/config/editor.editor.rich_text.yml
@@ -20,27 +20,29 @@ settings:
             - Bold
             - Italic
             - Strike
+            - Blockquote
             - Superscript
             - Subscript
             - '-'
             - RemoveFormat
         -
-          name: Links
-          items:
-            - Linkit
-            - DrupalUnlink
-        -
           name: Lists
           items:
             - BulletedList
             - NumberedList
+            - Outdent
+            - Indent
         -
           name: Media
           items:
-            - Blockquote
             - Table
             - HorizontalRule
-            - media_browser
+            - SpecialChar
+        -
+          name: Links
+          items:
+            - Linkit
+            - DrupalUnlink
         -
           name: 'Block Formatting'
           items:
@@ -51,10 +53,10 @@ settings:
             - ShowBlocks
             - Source
   plugins:
-    language:
-      language_list: un
     stylescombo:
       styles: ''
+    language:
+      language_list: un
     linkit:
       linkit_profile: powr
 image_upload:
