--- a/web/sites/default/config/editor.editor.simple_editor.yml
+++ b/web/sites/default/config/editor.editor.simple_editor.yml
@@ -15,15 +15,22 @@ settings:
         -
           name: Formatting
           items:
+            - Format
             - Bold
             - Italic
+            - Strike
             - Blockquote
-            - Format
+            - Superscript
+            - Subscript
+            - '-'
+            - RemoveFormat
         -
           name: Lists
           items:
             - BulletedList
             - NumberedList
+            - Outdent
+            - Indent
         -
           name: Links
           items:
@@ -34,10 +41,6 @@ settings:
           items:
             - HorizontalRule
             - SpecialChar
-            - Superscript
-            - Subscript
-            - Strike
-            - RemoveFormat
             - PasteFromWord
             - PasteText
   plugins:
