POWR-854 changed name of start date exposed filter identifier to start_date

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -677,7 +677,7 @@ display:
             description: ''
             use_operator: false
             operator: field_start_date_value_op
-            identifier: field_start_date_value
+            identifier: start_date
             required: false
             remember: false
             multiple: false
@@ -686,6 +686,7 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
