POWR-1068 Search improvement

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,8 +213,8 @@ run_tests: &run_tests
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            terminus remote:drush portlandor.dev -- core:cron -y
-            terminus remote:drush portlandor.dev -- cr
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- core:cron -y
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
           fi
     - run:
         name: Run tests against Pantheon
