--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -187,8 +187,14 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_project_type:
+    type: options_select
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_search_keywords:
-    weight: 16
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -196,10 +202,12 @@ content:
     type: string_textfield
     region: content
   field_shortname_or_acronym:
-    weight: 1
-    settings: {  }
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: chosen_select
+    type: string_textfield
     region: content
   field_start_date:
     weight: 9
@@ -301,5 +309,4 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden:
-  field_project_type: true
+hidden: {  }
