--- a/web/sites/default/config/field.field.group.project.field_project_type.yml
+++ b/web/sites/default/config/field.field.group.project.field_project_type.yml
@@ -18,7 +18,7 @@ entity_type: group
 bundle: project
 label: 'Project type'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
