--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -79,7 +79,6 @@ field_settings:
     datasource_id: 'entity:node'
     property_path: title
     type: solr_text_ngram
-    boost: !!float 21
     dependencies:
       module:
         - node
@@ -221,7 +220,7 @@ field_settings:
     datasource_id: 'entity:group'
     property_path: label
     type: solr_text_ngram
-    boost: !!float 21
+    boost: !!float 13
     dependencies:
       module:
         - group
@@ -408,13 +407,19 @@ processor_settings:
       'entity:node':
         datasource_boost: !!float 1
         bundle_boosts:
+          charter_article: !!float 0
+          charter_chapter: !!float 0
+          charter_section: !!float 1
           city_service: !!float 8
+          code_chapter: !!float 0
+          code_section: !!float 1
+          code_title: !!float 0
           development_permit: !!float 8
-          event: !!float 1
+          event: !!float 0
           guide: !!float 8
           information: !!float 0
-          news: !!float 1
-          page: !!float 0
+          news: !!float 0
+          page: !!float 1
       'entity:taxonomy_term':
         datasource_boost: !!float 3
         bundle_boosts:
