--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -12,28 +12,32 @@ show_all_when_no_keys: false
 index: full_index
 limit: 25
 searched_fields:
-  description: description
+  content_title: content_title
   field_search_keywords: field_search_keywords
-  label: label
-  label_1: label_1
-  name: name
-  name_1: name_1
+  group_field_search_keywords: group_field_search_keywords
+  group_title: group_title
   rendered_item: rendered_item
-  title: title
-  title_1: title_1
+  term_description: term_description
+  term_name: term_name
 style: view_modes
 view_mode_configuration:
   'entity:group_bureau_office': search_result
   'entity:group_elected_official': search_result
   'entity:group_program': search_result
   'entity:group_project': search_result
+  'entity:node_charter_article': default
+  'entity:node_charter_chapter': default
+  'entity:node_charter_section': default
   'entity:node_city_service': search_result
+  'entity:node_code_chapter': default
+  'entity:node_code_section': default
+  'entity:node_code_title': default
   'entity:node_development_permit': search_result
   'entity:node_event': search_result
-  'entity:node_news': search_result
-  'entity:node_page': search_result
   'entity:node_guide': search_result
   'entity:node_information': search_result
+  'entity:node_news': search_result
+  'entity:node_page': search_result
   'entity:taxonomy_term_audience': search_result
   'entity:taxonomy_term_community_actions': search_result
   'entity:taxonomy_term_topics': search_result
