POWR-854 testing changing the name of the patch to see if it will reapply

--- a/composer.json
+++ b/composer.json
@@ -160,7 +160,7 @@
                 "2174633 - View output is not used for entityreference options": "https://www.drupal.org/files/issues/2018-12-12/2174633-227.patch"
             },
             "drupal/bootstrap_datepicker": {
-                "POWR-904 - Extend bootstrap_datepicker to include support for exposed filter": "patches/powr-904-bootstrap-datepicker.patch"
+                "POWR-904/854 - Extend bootstrap_datepicker to include support for exposed filter": "patches/powr-904-bootstrap-datepicker.patch"
             },
             "drupal/ctools": {
                 "2475595 - Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch",
