POWR-1017 incremental commit to save my work for later

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "drupal/copyright_block": "^1.0@RC",
         "drupal/core": "8.6.16",
         "drupal/custom_add_another": "^1.0@beta",
+        "drupal/custom_view_filters": "^1.0@beta",
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.1",
         "drupal/easy_breadcrumb": "^1.8",
@@ -97,6 +98,7 @@
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
         "drupal/views_data_export": "^1.0@beta",
+        "drupal/views_filters_populate": "^1.1",
         "drupal/viewsreference": "^1.2",
         "drupal/webform": "^5.1",
         "drush/drush": "^9.5.0",
