--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -613,49 +613,6 @@ display:
           entity_field: type
           plugin_id: bundle
           group: 1
-        field_end_date_value:
-          id: field_end_date_value
-          table: node__field_end_date
-          field: field_end_date_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>='
-          value:
-            min: ''
-            max: ''
-            value: today
-            type: date
-          group: 2
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: datetime
         field_start_date_value:
           id: field_start_date_value
           table: node__field_start_date
@@ -663,7 +620,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: between
+          operator: '>='
           value:
             min: today
             max: '+30 days'
@@ -677,7 +634,7 @@ display:
             description: ''
             use_operator: false
             operator: field_start_date_value_op
-            identifier: start_date
+            identifier: field_start_date_value
             required: false
             remember: false
             multiple: false
@@ -705,6 +662,53 @@ display:
               1: {  }
               2: {  }
               3: {  }
+          plugin_id: datetime
+        field_end_date_value:
+          id: field_end_date_value
+          table: node__field_end_date
+          field: field_end_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '<='
+          value:
+            min: ''
+            max: ''
+            value: '+30 days'
+            type: date
+          group: 2
+          exposed: true
+          expose:
+            operator_id: field_end_date_value_op
+            label: 'End date (field_end_date)'
+            description: ''
+            use_operator: false
+            operator: field_start_date_value_op
+            identifier: start_date
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
           plugin_id: datetime
       sorts:
         field_start_date_value:
@@ -808,7 +812,7 @@ display:
         operator: AND
         groups:
           1: AND
-          2: OR
+          2: AND
       link_url: ''
       link_display: page_1
     cache_metadata:
